oplossing/cluster_1/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-route
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
